--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -11,6 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "webpack": "^4.19.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-loose": "^8.0.0",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack-cli": "^3.1.1"
   }
 }
