--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config build/webpack.config.js"
+    "build:client": "webpack --config build/webpack.config.client.js",
+    "build:server": "webpack --config build/webpack.config.server.js",
+    "clear": "rimraf dist",
+    "build": "npm run clear && npm run build:client && npm run build:server",
+    "start": "node server/server.js"
   },
   "author": "eastsummer",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "webpack": "^4.19.1"
@@ -21,6 +25,7 @@
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
+    "rimraf": "^2.6.2",
     "webpack-cli": "^3.1.1"
   }
 }
