--- a/webpack-demo/.babelrc
+++ b/webpack-demo/.babelrc
@@ -2,5 +2,8 @@
     "presets": [
         ["es2015", {"losse": true}],
         "react"
+    ],
+    "plugins":[
+        "react-hot-loader/babel"
     ]
 }
