--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -27,6 +27,7 @@
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "react-hot-loader": "^4.0.0",
     "rimraf": "^2.6.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.9"
