--- a/webpack-demo/package.json
+++ b/webpack-demo/package.json
@@ -7,13 +7,14 @@
     "build:client": "webpack --config build/webpack.config.client.js",
     "build:server": "webpack --config build/webpack.config.server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
+    "dev:server": "cross-env NODE_ENV=development node server/server.js",
     "clear": "rimraf dist",
-    "build": "npm run clear && npm run build:client && npm run build:server",
-    "start": "node server/server.js"
+    "build": "npm run clear && npm run build:client && npm run build:server"
   },
   "author": "eastsummer",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -27,6 +28,8 @@
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "http-proxy-middleware": "^0.19.0",
+    "memory-fs": "^0.4.1",
     "react-hot-loader": "^4.0.0",
     "rimraf": "^2.6.2",
     "webpack-cli": "^3.1.1",
